// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options selectedCardKeys when given should set the select state of the item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": true,
    "key": 1,
  },
]
`;

exports[`Options selection allowSelectAll when it is false and selection mode is 'multiple' selection should not work 1`] = `[]`;

exports[`Options selection allowSelectAll when it is true and selection mode is 'multiple' selection should not work 1`] = `
[
  {
    "locateInMenu": "auto",
    "location": "before",
    "name": "selectAllButton",
    "options": {
      "disabled": false,
      "icon": "selectall",
      "onClick": [Function],
      "text": "Select all",
    },
    "widget": "dxButton",
  },
  {
    "locateInMenu": "auto",
    "location": "before",
    "name": "clearSelectionButton",
    "options": {
      "disabled": true,
      "icon": "close",
      "onClick": [Function],
      "text": "Clear selection",
    },
    "widget": "dxButton",
  },
]
`;

exports[`Options selection allowSelectAll when it is true and selection mode isn't 'multiple' selection should not work 1`] = `[]`;

exports[`Options selection mode when it is 'none' and the selectedCardKeys is specified selection should not apply 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": false,
    "key": 1,
  },
]
`;

exports[`Options selection mode when it is 'none' selection should not work 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": false,
    "key": 1,
  },
]
`;
